@@ -1,3 +1,9 @@
+2008-03-10  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
+
+	API update: Use generic getters for standard DIDL props.
+
 2008-02-29  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/playlist-treeview.c:
